# rcvprocessor

./: .gitignore  README.md  requirements.txt  setup.cfg
src/: boto.py  rcv.py
src/rcvprocessor/: __init__.py  boto.py  frame.py  logger.py  rcv.py
