[metadata]
name = kvsparser
version = attr: src.__version__
author = Alexander Rose
description = AWS Real Time Computer Vision Lambda and Kinesis Video Processor.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
license_file = LICENSE
platform = any
url = https://github.com/rosealexander/aws-rcv-processor
classifiers =
  Intended Audience :: Developers
  Natural Language :: English
  Development Status :: 4 - Beta
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Information Analysis
  Topic :: Utilities

[options]
python_requires = >= 3.8
packages =
  aws-rcv-processor
package_dir =
  aws-rcv-processor = src
install_requires =
  aiobotocore
  opencv-python
  kvsparser
  importlib-metadata; python_version<"3.8"
