[metadata]
name = rcvprocessor
version = attr: rcvprocessor.__version__
author = Alexander Rose
description = AWS Real Time Computer Vision; Lambda and Kinesis Video Processor.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
license_file = LICENSE
platform = any
url = https://github.com/rosealexander/aws-rcv-processor
classifiers =
  Intended Audience :: Developers
  Natural Language :: English
  Development Status :: 3 - Alpha
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Information Analysis
  Topic :: Utilities

[options]
python_requires = >= 3.10
package_dir=
  =src
packages=rcvprocessor
install_requires =
  aiobotocore
  opencv-python
  kvsparser
  importlib-metadata; python_version<"3.10"

[options.packages.find]
where=src
